hidden learnpath visibility fix - refs #6999

--- a/main/css/chamilo/default.css
+++ b/main/css/chamilo/default.css
@@ -13,7 +13,7 @@ body {
 }
 a {
     text-decoration: none;
-    color :#6E6E6E;
+    color :#0B4C5F;
 }
 a:visited {
     text-decoration: none;
